--- a/task1.html
+++ b/task1.html
@@ -20,7 +20,7 @@
             padding: 10px;
             color: #B8A233;
             border-color: #B8A233;
-            
+            border-style: solid;
         }
         img{
             height: 400px;
